kubernetes/platform/longhorn/app/components/route/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: longhorn-dashboard
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: longhorn-httproute
  oidc:
    provider:
      issuer: "https://iam.${CLUSTER_DOMAIN}/realms/picluster"
    clientIDRef:
      name: oauth-externalsecret
      key: client-id
    clientSecret:
      name: oauth-externalsecret
      key: client-secret
    redirectURL: "https://longhorn.${CLUSTER_DOMAIN}"
    logoutPath: "/longhorn/logout"
